--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,12 @@
         <div class="container">
 		<h1>Login</h1>
         <!-- This is where our form will go. -->
+			<form action="/login" method="POST">
+				{{ form.csrf_token }}
+				{{ form.email.label }} {{ form.email(size=30) }}
+				{{ form.password.label }} {{ form.email(size=30) }}
+				<input type="submit" value="Log In">
+			</form>
         </div>
 	</body>
 </html>
