--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,17 @@
 	</head>
 	<body>
         <div class="container">
-		<h1>Login</h1>
-        <!-- This is where our form will go. -->
-			<form action="/login" method="POST">
+			<h1>Login</h1>
+        	<!-- This is where our form will go. -->
+			<form action="{{ url_for('login') }}" method="POST">
 				{{ form.csrf_token }}
-				{{ form.email.label }} {{ form.email(size=30) }}
-				{{ form.password.label }} {{ form.email(size=30) }}
-				<input type="submit" value="Log In">
+				<p>
+					{{ form.email.label }} <br> {{ form.email(size=30) }}
+				</p>
+				<p>
+					{{ form.password.label }} <br> {{ form.email(size=30) }}
+				</p>
+				{{ form.submit }}
 			</form>
         </div>
 	</body>
