Used Bootstrap-Flask as an inherited Template

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    {{ bootstrap.load_css() }}
     <title>{% block title %} {% endblock %}</title>
-    <style>
-    {% block styling %}
-    body{
-        background: purple;
-    }
-    {% endblock %}
-    </style>
 </head>
 <body>
     {% block content %}{% endblock %}
+    {{ bootstrap.load_js() }}
 </body>
 </html>
