--- a/templates/login.html
+++ b/templates/login.html
@@ -1,29 +1,25 @@
-<!DOCTYPE HTML>
+{% extends "base.html" %}
+{% block title %} Login {% endblock %}
+{% block content %}
+<div class="container">
+	<h1>Login</h1>
+	<!-- This is where our form will go. -->
 
-<html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
-        <div class="container">
-			<h1>Login</h1>
-        	<!-- This is where our form will go. -->
-			<form action="{{ url_for('login') }}" method="POST" novalidate>
-				{{ form.csrf_token }}
-				<p>
-					{{ form.email.label }} <br> {{ form.email(size=30) }}
-					{% for error in form.email.errors %}
-						<span style="color:red">{{ error }}</span>
-					{% endfor %}
-				</p>
-				<p>
-					{{ form.password.label }} <br> {{ form.password(size=30) }}
-					{% for error in form.password.errors %}
-						<span style="color:red">{{ error }}</span>
-					{% endfor %}
-				</p>
-				{{ form.submit }}
-			</form>
-        </div>
-	</body>
-</html>
+	<form action="{{ url_for('login') }}" method="POST" novalidate>
+		{{ form.csrf_token }}
+		<p>
+			{{ form.email.label }} <br> {{ form.email(size=30) }}
+			{% for error in form.email.errors %}
+			<span style="color:red">{{ error }}</span>
+			{% endfor %}
+		</p>
+		<p>
+			{{ form.password.label }} <br> {{ form.password(size=30) }}
+			{% for error in form.password.errors %}
+			<span style="color:red">{{ error }}</span>
+			{% endfor %}
+		</p>
+		{{ form.submit }}
+	</form>
+</div>
+{% endblock %}
